Fix out of screen notification

--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -7,7 +7,7 @@
   left: 50%;
   width: 100%;
   font-family: FFDINWebProLight, sans-serif;
-  transform: translate3d(-50%, -150%, 0);
+  transform: translate3d(-50%, 150%, 0);
   height: auto;
   min-width: calc(100% - 1.5rem);
   transition: ease 0.05s;
